--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,13 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+
+    %header
+      %nav
+        %ul
+          %li
+            = link_to "Inicio", root_path
+
     = yield
+
+    %footer
