--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@comment) do |f|
+= form_for([@article, @comment]) do |f|
   - if @comment.errors.any?
     #error_explanation
       %h2
@@ -7,14 +7,6 @@
       %ul
         - @comment.errors.full_messages.each do |message|
           %li= message
-  .field
-    = f.label :user_id
-    %br/
-    = f.text_field :user_id
-  .field
-    = f.label :article_id
-    %br/
-    = f.text_field :article_id
   .field
     = f.label :body
     %br/
